package com.dthurman.moviesaver.core.util

object TestTags {

    // Login Screen
    const val LOGIN_GOOGLE_BUTTON = "LOGIN_GOOGLE_BUTTON"
    const val LOGIN_ERROR_MESSAGE = "LOGIN_ERROR_MESSAGE"
    const val LOGIN_LOADING_INDICATOR = "LOGIN_LOADING_INDICATOR"
    const val APP_LOGO = "APP_LOGO"

    // Settings Modal
    const val SETTINGS_MODAL = "SETTINGS_MODAL"
    const val SETTINGS_SIGN_OUT_BUTTON = "SETTINGS_SIGN_OUT_BUTTON"
    const val SETTINGS_THEME_SWITCH = "SETTINGS_THEME_SWITCH"
    const val SETTINGS_USER_NAME = "SETTINGS_USER_NAME"
    const val SETTINGS_USER_EMAIL = "SETTINGS_USER_EMAIL"
    const val SETTINGS_CLOSE_BUTTON = "SETTINGS_CLOSE_BUTTON"

    // Seen Screen
    const val MY_MOVIES_SORT_BUTTON = "MY_MOVIES_SORT_BUTTON"
    const val MY_MOVIES_SORT_DROPDOWN_SECTION = "MY_MOVIES_SORT_DROPDOWN_SECTION"
    const val TOGGLE_FAVORITE_BUTTON = "TOGGLE_FAVORITE_BUTTON"

    fun moviePreview(movieTitle: String) = "MOVIE_PREVIEW_$movieTitle"

    // Detail Screen
    const val MOVIE_DETAIL_IMAGE = "MOVIE_DETAIL_IMAGE"
    const val SET_MOVIE_AS_FAVORITE_BUTTON = "SET_MOVIE_AS_FAVORITE_BUTTON"
    const val DETAIL_WATCHLIST_BUTTON = "DETAIL_WATCHLIST_BUTTON"
    const val DETAIL_SEEN_BUTTON = "DETAIL_SEEN_BUTTON"
    const val DETAIL_MOVIE_TITLE = "DETAIL_MOVIE_TITLE"
    const val DETAIL_MOVIE_OVERVIEW = "DETAIL_MOVIE_OVERVIEW"
    const val DETAIL_RATING_DISPLAY = "DETAIL_RATING_DISPLAY"

}